--- a/UpwardApi/appsettings.Development.json
+++ b/UpwardApi/appsettings.Development.json
@@ -1,4 +1,10 @@
-﻿{
+﻿/*
+  开发配置
+*/
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LANGDEXUMING-HP\\SQLEXPRESS;Database=UpwardApi.Test;Trusted_Connection=True"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
