--- a/UpwardWebApp/appsettings.json
+++ b/UpwardWebApp/appsettings.json
@@ -1,4 +1,10 @@
-﻿{
+﻿/*
+  生产配置
+*/
+{
+  // "ConnectionStrings": {
+  //   "DefaultConnection": "Server=LANGDEXUMING-HP\\SQLEXPRESS;Database=CSMvvmLightWebApp.Test;Trusted_Connection=True"
+  // },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
