--- a/UpwardWebApp/appsettings.Development.json
+++ b/UpwardWebApp/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  // "ConnectionStrings": {
+  //   "DefaultConnection": "Server=LANGDEXUMING-HP\\SQLEXPRESS;Database=UpwardWebApp.Test;Trusted_Connection=True"
+  // },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
