--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ DemoProject/Client/obj/*
 DemoProject/Client/bin/*
 DemoProject/Server/obj/*
 DemoProject/Server/bin/*
+UpwardApi/Migrations/*
 
 # Build results
 [Dd]ebug/
