--- a/UpwardApi/UpwardApi.csproj
+++ b/UpwardApi/UpwardApi.csproj
@@ -9,29 +9,12 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0"/>
-    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.9-dmr"/>
-    
-            <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0"/>
-            <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0" PrivateAssets="All"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0" PrivateAssets="All"/>
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="*"/>
+    <PackageReference Include="MySql.Data.EntityFrameworkCore.Design" Version="*"/>
   </ItemGroup>
-
-    <ItemGroup>
-    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet"
-                            Version="2.0.0" />
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0"/>
   </ItemGroup>
-
-  <!-- <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0"/>
-    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="2.0.0"/>
-  </ItemGroup> -->
-
-  <!-- <ItemGroup>
-
-            <ProjectReference Include="..\..\..\src\Home-2.0.0\Logging\src\Microsoft.Extensions.Logging.Debug\Microsoft.Extensions.Logging.Debug.csproj" Version="2.0.0"/>
-    <ProjectReference Include="..\..\..\src\Home-2.0.0\Logging\src\Microsoft.Extensions.Logging.Configuration\Microsoft.Extensions.Logging.Configuration.csproj" Version="2.0.0"/>
-        <ProjectReference Include="..\..\..\src\Home-2.0.0\Logging\src\Microsoft.Extensions.Logging.Console\Microsoft.Extensions.Logging.Console.csproj" Version="2.0.0"/>
-                <ProjectReference Include="..\..\..\src\Home-2.0.0\Logging\src\Microsoft.Extensions.Logging\Microsoft.Extensions.Logging.csproj" Version="2.0.0"/>
-  </ItemGroup> -->
 </Project>
