--- a/UpwardApi/appsettings.Production.json
+++ b/UpwardApi/appsettings.Production.json
@@ -1,11 +1,11 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LANGDEXUMING-HP/SQLEXPRESS;Database=upward_api_test;User Id=root;Password=30757853;Charset=utf8;"
+    "DefaultConnection": "server=localhost;port=3306;database=upward_api_test;user=root;password=12345678;charset=utf8;"
   },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Info",
+      "Default": "Information",
       "System": "Warning",
       "Microsoft": "Warning"
     }
