--- a/UpwardApi/appsettings.Development.json
+++ b/UpwardApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=upward_api_test;user=root;password=12345678;charset=utf8;"
+    "DefaultConnection": "Server=LANGDEXUMING-HP\\SQLEXPRESS;Database=UpwardApi.Test;Trusted_Connection=True"
   },
   "Logging": {
     "IncludeScopes": false,
