--- a/Reggie.Blog/appsettings.Development.json
+++ b/Reggie.Blog/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LANGDEXUMING-HP\\SQLEXPRESS;Database=Reggie.Blog;Trusted_Connection=True"
+    "DefaultConnection": "Server=LANGDEXUMING-HP\\SQLEXPRESS;Database=Blog;Trusted_Connection=True"
   },
   "Logging": {
     "IncludeScopes": false,
