--- a/Reggie.Upward.App/Reggie.Upward.App/Reggie.Upward.App.csproj
+++ b/Reggie.Upward.App/Reggie.Upward.App/Reggie.Upward.App.csproj
@@ -19,7 +19,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -28,7 +28,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -122,11 +122,11 @@
     <Folder Include="Utils\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BasicBracket\Reggie.BasicBracket.csproj">
+    <ProjectReference Include="..\Reggie.BasicBracket\Reggie.BasicBracket.csproj">
       <Project>{cf6ff455-379e-48cc-b5ce-0828a0556407}</Project>
       <Name>Reggie.BasicBracket</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Business\Reggie.Upward.App.Business.csproj">
+    <ProjectReference Include="..\Reggie.Upward.App.Business\Reggie.Upward.App.Business.csproj">
       <Project>{97fe1f65-71c7-4c86-8ad3-36af9ce83109}</Project>
       <Name>Reggie.Upward.App.Business</Name>
     </ProjectReference>
