--- a/Reggie.Upward.App/Reggie.BasicBracket/Reggie.BasicBracket.csproj
+++ b/Reggie.Upward.App/Reggie.BasicBracket/Reggie.BasicBracket.csproj
@@ -49,10 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Http\HttpMethodConstants.cs" />
-    <Compile Include="Http\HttpUtil.cs" />
-    <Compile Include="LoggerExtension.cs" />
+    <Compile Include="Extensions\TagAttribute.cs" />
+    <Compile Include="Utils\Algorithm\HashUtil.cs" />
+    <Compile Include="Utils\File\FileUtil.cs" />
+    <Compile Include="Utils\Http\HttpMethodConstants.cs" />
+    <Compile Include="Utils\Http\HttpResult.cs" />
+    <Compile Include="Utils\Http\HttpUtil.cs" />
+    <Compile Include="Extensions\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\System\RegistryKeyUtil.cs" />
+    <Compile Include="Utils\Xml\XmlUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
