--- a/Reggie.Upward.App/Reggie.Upward.App/App.config
+++ b/Reggie.Upward.App/Reggie.Upward.App/App.config
@@ -1,5 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>  
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>  
+  </configSections>
+  <!--日志记录组建配置-->  
+  <log4net>  
+    <!-- Console部分log输出格式的设定 -->  
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">  
+      <layout type="log4net.Layout.PatternLayout">  
+        <conversionPattern value="%date [%thread] %-5level %logger [%ndc] : %message%newline" />  
+      </layout>  
+    </appender>  
+    <!-- 日志文件部分log输出格式的设定 -->  
+    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">  
+      <file value="Logs\Log_" />  
+      <appendToFile value="true" />  
+      <rollingStyle value="Date" />  
+      <datePattern value="yyyyMMdd'.txt'" />  
+      <staticLogFileName value="false" />  
+      <layout type="log4net.Layout.PatternLayout">  
+        <!--程序启动后的首次日志打印，最好空三行-->
+        <header value="" />
+        <ConversionPattern value="%date [%thread] %-5level %logger [%ndc] : %message%newline" />
+      </layout>  
+    </appender>  
+  
+    <!-- Setup the root category, add the appenders and set the default level -->  
+    <root>  
+      <level value="ALL" />  
+      <appender-ref ref="ConsoleAppender" />  
+      <appender-ref ref="RollingLogFileAppender" />  
+    </root>  
+  </log4net>
+  
+
+  
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
