--- a/Reggie.Upward.WebApi/appsettings.Development.json
+++ b/Reggie.Upward.WebApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LANGDEXUMING-HP\\SQLEXPRESS;Database=Reggie.Upward.WebApi.Test;Trusted_Connection=True"
+    "DefaultConnection": "Server=LANGDEXUMING-HP\\SQLEXPRESS;Database=UpwardApi.Test;Trusted_Connection=True"
   },
   "Logging": {
     "IncludeScopes": false,
