--- a/Reggie.Blog/appsettings.Production.json
+++ b/Reggie.Blog/appsettings.Production.json
@@ -1,7 +1,8 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;port=3306;database=blog;user=root;password=12345678;charset=utf8;"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3306;database=blog;user=root;password=12345678;charset=utf8;"
+  },
+  "UseMSSQLServer": false,
     "Logging": {
         "IncludeScopes": false,
         "LogLevel": {
