--- a/Reggie.Blog/Reggie.Blog.csproj
+++ b/Reggie.Blog/Reggie.Blog.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
+    <Folder Include="Utilities\" />
     <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\js\" />
