--- a/Reggie.Upward.App/Reggie.BasicBracket/Reggie.Utilities.csproj
+++ b/Reggie.Upward.App/Reggie.BasicBracket/Reggie.Utilities.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Utils\Http\HttpUtil.cs" />
     <Compile Include="Extensions\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\System\RegistryKeyUtil.cs" />
+    <Compile Include="Utils\Windows\RegistryKeyUtil.cs" />
     <Compile Include="Utils\Xml\XmlUtil.cs" />
   </ItemGroup>
   <ItemGroup>
