--- a/Reggie.Upward.App/Reggie.Upward.App/Reggie.Upward.App.csproj
+++ b/Reggie.Upward.App/Reggie.Upward.App/Reggie.Upward.App.csproj
@@ -75,6 +75,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Constants\AppConstants.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Page Include="MainWindow.xaml">
@@ -122,7 +123,7 @@
     <Folder Include="Utils\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Reggie.BasicBracket\Reggie.Utilities.csproj">
+    <ProjectReference Include="..\Reggie.Utilities\Reggie.Utilities.csproj">
       <Project>{cf6ff455-379e-48cc-b5ce-0828a0556407}</Project>
       <Name>Reggie.Utilities</Name>
     </ProjectReference>
