--- a/Reggie.Upward.WebApi/appsettings.Development.json
+++ b/Reggie.Upward.WebApi/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=LANGDEXUMING-HP\\SQLEXPRESS;Database=UpwardApi.Test;Trusted_Connection=True"
   },
+  "UseMSSQLServer": true,
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
