--- a/Reggie.Upward.WebApi/Reggie.Upward.WebApi.csproj
+++ b/Reggie.Upward.WebApi/Reggie.Upward.WebApi.csproj
@@ -3,6 +3,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Controllers\HomeController.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Middlewares\" />
     <Folder Include="Migrations\" />
     <Folder Include="Models\" />
     <Folder Include="Utilities\" />
