--- a/Reggie.Upward.WebApi/appsettings.Production.json
+++ b/Reggie.Upward.WebApi/appsettings.Production.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=upward_api_test;user=root;password=12345678;charset=utf8;"
   },
+  "UseMSSQLServer": false,
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
