--- a/Reggie.Upward.App/Reggie.Utilities/Reggie.Utilities.csproj
+++ b/Reggie.Upward.App/Reggie.Utilities/Reggie.Utilities.csproj
@@ -68,6 +68,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="Reggie.Utilities.NET40.csproj">
+      <Project>{88A37AEC-49BF-4CBE-B2F7-E922AA41F073}</Project>
+      <Name>Reggie.Utilities.NET40</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
