临时提交平台账号管理相关代码，该模块还未设计完成，暂时提交，可能需重构

--- a/Reggie.Upward.App/Reggie.Upward.App/Reggie.Upward.App.csproj
+++ b/Reggie.Upward.App/Reggie.Upward.App/Reggie.Upward.App.csproj
@@ -76,6 +76,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Constants\AppConstants.cs" />
+    <Compile Include="Controls\TestSelector.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
     <Page Include="MainWindow.xaml">
@@ -116,7 +117,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
