--- a/Reggie.Upward.App/Reggie.Utilities/Reggie.Utilities.NET40.csproj
+++ b/Reggie.Upward.App/Reggie.Utilities/Reggie.Utilities.NET40.csproj
@@ -34,6 +34,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\log4net.2.0.8\lib\net40-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,6 +42,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\Logger.cs" />
@@ -51,6 +53,7 @@
     <Compile Include="Utils\Http\HttpResult.cs" />
     <Compile Include="Utils\Http\HttpUtil.cs" />
     <Compile Include="Utils\Windows\RegistryKeyUtil.cs" />
+    <Compile Include="Utils\Wpf\PresentationUtil.cs" />
     <Compile Include="Utils\Xml\XmlUtil.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
