--- a/Reggie.Upward.App/Reggie.Utilities/Reggie.Utilities.csproj
+++ b/Reggie.Upward.App/Reggie.Utilities/Reggie.Utilities.csproj
@@ -45,6 +45,7 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -53,6 +54,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Utils\Algorithm\HashUtil.cs" />
@@ -63,16 +65,11 @@
     <Compile Include="Extensions\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Windows\RegistryKeyUtil.cs" />
+    <Compile Include="Utils\Wpf\PresentationUtil.cs" />
     <Compile Include="Utils\Xml\XmlUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="Reggie.Utilities.NET40.csproj">
-      <Project>{88A37AEC-49BF-4CBE-B2F7-E922AA41F073}</Project>
-      <Name>Reggie.Utilities.NET40</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
