--- a/Reggie.WPF/Reggie.WPF.Utilities/Reggie.WPF.Utilities.csproj
+++ b/Reggie.WPF/Reggie.WPF.Utilities/Reggie.WPF.Utilities.csproj
@@ -70,9 +70,13 @@
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\..\VgisWpfBrowserApp\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\..\..\sunoo\DataAcquisitionCenter\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -95,6 +99,8 @@
     <Compile Include="Utils\Http\HttpResult.cs" />
     <Compile Include="Utils\Http\HttpUtil.cs" />
     <Compile Include="Utils\Security\StringSecurityUtil.cs" />
+    <Compile Include="Utils\Windows\HardwareInfo.cs" />
+    <Compile Include="Utils\Windows\NetworkUtil.cs" />
     <Compile Include="Utils\Windows\RegistryKeyUtil.cs" />
     <Compile Include="Utils\Wpf\PresentationUtil.cs" />
     <Compile Include="Utils\Xml\XmlUtil.cs" />
