--- a/Reggie.Blog/appsettings.Production.json
+++ b/Reggie.Blog/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=blog;user=root;password=12345678;charset=utf8;"
+    "DefaultConnection": "server=47.107.90.169;port=3306;database=blog;user=root;password=30757853;charset=utf8;"
   },
   "UseMSSQLServer": false,
     "Logging": {
