--- a/Reggie.WPF/Reggie.WPF.CommonComponents/Reggie.WPF.CommonComponents.csproj
+++ b/Reggie.WPF/Reggie.WPF.CommonComponents/Reggie.WPF.CommonComponents.csproj
@@ -95,6 +95,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\ClickToCloseWindowAction.cs" />
     <Compile Include="Behaviors\DragInCanvasBehavior.cs" />
     <Compile Include="Behaviors\PasswordBoxBindingBehavior.cs" />
     <Compile Include="Behaviors\WindowAutoCenterBehavior.cs" />
@@ -128,6 +129,7 @@
     <Compile Include="Converters\RectConverter.cs" />
     <Compile Include="Converters\StringIsNullOrEmptyConverter.cs" />
     <Compile Include="Converters\UrlToImageWithCacheConverter.cs" />
+    <Compile Include="Converters\ValueEqualParamToVisiblityConverter.cs" />
     <Compile Include="Helper\ControlsSearchHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -158,7 +160,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Actions\" />
     <Folder Include="Language\" />
     <Folder Include="Themes\" />
   </ItemGroup>
