--- a/Reggie.Blog/appsettings.Development.json
+++ b/Reggie.Blog/appsettings.Development.json
@@ -1,9 +1,9 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LANGDEXUMING-HP\\SQLEXPRESS;Database=Blog;Trusted_Connection=True",
-    //"DefaultConnection": "server=47.107.90.169;port=3306;database=blog;user=root;password=30757853;charset=utf8;"
+     //"DefaultConnection": "Server=LANGDEXUMING-HP\\SQLEXPRESS;Database=Blog;Trusted_Connection=True",
+    "DefaultConnection": "server=47.107.90.169;port=3306;database=blog;user=root;password=30757853;charset=utf8;"
   },
-  "UseMSSQLServer": true,
+  "UseMSSQLServer": false,
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
